Update CSIT456 Final Project.ipynb
Fixed another typo

--- a/CSIT456 Final Project.ipynb
+++ b/CSIT456 Final Project.ipynb
@@ -42,7 +42,7 @@
     "1. name: The English name of the Pokémon.\n",
     "2. japanese_name: The Japanese name of the Pokémon.\n",
     "3. pokedex_number: The entry number of the Pokémon in the National Pokdex. **In this assignment, I made this entry the index to reduce confusion when indexing, since this starts at 1 instead of 0.**\n",
-    "4. percentage_male: Percentage of the species that is male. Blank if the pokeon is genderless.\n",
+    "4. percentage_male: Percentage of the species that is male. Blank if the Pokémon is genderless.\n",
     "5. type1: Primary type of the Pokémon.\n",
     "6. type2: Secondary type of the Pokémon.\n",
     "7. classification: Classification of the Pokémon.\n",
