Update CSIT456 Final Project.ipynb

--- a/CSIT456 Final Project.ipynb
+++ b/CSIT456 Final Project.ipynb
@@ -49,7 +49,7 @@
     "8. height_m: Height in meters.\n",
     "9. weight_kg: Weight in kilograms.\n",
     "10. capture_rate: Probability of capture.\n",
-    "11. baseeggsteps: Number of steps required to hatch an egg of the Pokémon.\n",
+    "11. base_egg_steps: Number of steps required to hatch an egg of the Pokémon.\n",
     "12. abilities: Stringified list of possible abilities.\n",
     "13. experience_growth: Experience needed to reach level 100.\n",
     "14. base_happiness: Base happiness level of the Pokémon.\n",
