Update CSIT456 Final Project.ipynb

--- a/CSIT456 Final Project.ipynb
+++ b/CSIT456 Final Project.ipynb
@@ -41,7 +41,7 @@
     "This dataset contains information from the first seven mainline Pokémon games regarding all existing Pokémon up until that point (802 samples). 41 different categories are present (one is used for indexing, so effectivelty there are 40): \n",
     "1. name: The English name of the Pokémon.\n",
     "2. japanese_name: The Japanese name of the Pokémon.\n",
-    "3. pokedex_number: The entry number of the Pokémon in the National Pokdex. **In this assignment, this entry is used as the index to reduce confusion when indexing, since this starts at 1 instead of 0.**\n",
+    "3. pokedex_number: The entry number of the Pokémon in the National Pokédex. **In this assignment, this entry is used as the index to reduce confusion when indexing, since this starts at 1 instead of 0.**\n",
     "4. percentage_male: Percentage of the species that is male. Blank if the Pokémon is genderless.\n",
     "5. type1: Primary type of the Pokémon.\n",
     "6. type2: Secondary type of the Pokémon.\n",
